--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
     
-    - name: Set Node.js 10.x
+    - name: Set Node.js 12.x
       uses: actions/setup-node@master
       with:
-        version: 10.x
+        node-version: 12.x
 
     - name: npm install
       run: npm install
