--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Set Node.js 12.x
-      uses: actions/setup-node@master
+      uses: actions/setup-node@v1
       with:
         node-version: 12.x
 
