--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "setup-terraform",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
   "description": "setup terraform action",
-  "main": "lib/setup-terraform.js",
+  "main": "lib/main.js",
   "scripts": {
     "audit": "npm install && npm audit --audit-level=moderate",
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "test": "jest"
+    "lint": "eslint src/**/*.ts",
+    "pack": "ncc build",
+    "test": "jest",
+    "all": "npm run build && npm run format && npm run lint && npm run pack && npm test"
   },
   "repository": {
     "type": "git",
@@ -26,6 +29,7 @@
     "@actions/core": "^1.2.1",
     "@actions/exec": "^1.0.3",
     "@actions/github": "^2.0.1",
+    "@actions/http-client": "^1.0.1",
     "@actions/io": "^1.0.2",
     "@actions/tool-cache": "^1.1.2",
     "semver": "^6.3.0"
@@ -34,8 +38,14 @@
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.6",
     "@types/semver": "^6.0.0",
+    "@typescript-eslint/parser": "^2.8.0",
+    "@zeit/ncc": "^0.20.5",
+    "eslint": "^5.16.0",
+    "eslint-plugin-github": "^2.0.0",
+    "eslint-plugin-jest": "^22.21.0",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
+    "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
     "ts-jest": "^24.0.2",
     "typescript": "^3.7.4"
