--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: ./
       with: 
-        version: '0.12'
+        version: '>= 0.12'
     - run: terraform version
