--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,10 @@ jobs:
     - run: |
         npm install
         npm run all
+    - name: audit security
+      continue-on-error: true
+      run: npm audit --audit-level=moderate
+      if: matrix.operating-system == 'ubuntu-latest'
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
