--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,12 @@
 name: 'Setup Terraform'
 description: 'Setup Terraform and add it to the PATH'
-author: 'volcano-coffee-company'
+author: 'innovationnorway'
 branding:
   icon: 'terminal'
   color: 'purple'
 inputs: 
   version:
     description: 'The Terraform version to download (if necessary) and use. Example: ~> 0.12'
-    default: '>= 0.12'
 runs:
   using: 'node12'
   main: 'dist/index.js'
