--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
     "@actions/github": "^4.0.0",
+    "@actions/glob": "^0.1.0",
     "@actions/http-client": "^1.0.8",
     "@actions/io": "^1.0.2",
     "@actions/tool-cache": "^1.5.5",
+    "@innovationnorway/terraform-config": "0.1.0-alpha.1",
     "semver": "^7.3.2"
   },
   "devDependencies": {
